[gd_scene load_steps=14 format=3 uid="uid://8rewujhccab8"]

[ext_resource type="Script" path="res://Screens/gallery pages/art_galllery_01_hirdrih.gd" id="1_5ebhi"]
[ext_resource type="Texture2D" uid="uid://c6dr64ddjy5cm" path="res://assets/sprites/texture button 2 normal.png" id="1_nypbw"]
[ext_resource type="PackedScene" uid="uid://w3he56eg4uvx" path="res://Screens/gallery pages/images_to_show.tscn" id="2_2jboc"]
[ext_resource type="Texture2D" uid="uid://5yxo2yabds40" path="res://assets/sprites/texture button 3 pressed.png" id="2_4okgr"]
[ext_resource type="Texture2D" uid="uid://couaifd0r2835" path="res://assets/sprites/texture button 1 hover.png" id="3_ag4yx"]
[ext_resource type="FontFile" uid="uid://dodq4dp8dwf52" path="res://assets/font/nineteen-ninety-seven-font/NineteenNinetySeven-11XB.ttf" id="4_c80yb"]
[ext_resource type="Texture2D" uid="uid://bmkqfj1nom6rb" path="res://assets/sprites/sprite board text test.png" id="5_u0b4l"]
[ext_resource type="Texture2D" uid="uid://30ki8ts1uwov" path="res://assets/sprites/sprite board text test v2.png" id="8_v1ty1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cs2ds"]
size = Vector2(223.938, 14096.1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md850"]
size = Vector2(14762, 191.5)

[sub_resource type="Animation" id="Animation_7o40y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("infotext:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 664)]
}

[sub_resource type="Animation" id="Animation_s8eqg"]
resource_name = "showbox"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("infotext:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 664), Vector2(0, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b6hsl"]
_data = {
"RESET": SubResource("Animation_7o40y"),
"showbox": SubResource("Animation_s8eqg")
}

[node name="ArtGalllery01Hirdrih" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ebhi")

[node name="ImagesToShow" parent="." instance=ExtResource("2_2jboc")]
position = Vector2(536, 225)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-6576, 167)
shape = SubResource("RectangleShape2D_cs2ds")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(7984, 167)
shape = SubResource("RectangleShape2D_cs2ds")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(747, -6800.75)
shape = SubResource("RectangleShape2D_md850")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(747, 7183)
shape = SubResource("RectangleShape2D_md850")

[node name="QuitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 594.0
offset_right = 126.0
offset_bottom = 643.0
texture_normal = ExtResource("1_nypbw")
texture_pressed = ExtResource("2_4okgr")
texture_hover = ExtResource("3_ag4yx")
stretch_mode = 0

[node name="Label2" type="Label" parent="QuitButton"]
layout_mode = 0
offset_left = 18.0
offset_top = 7.0
offset_right = 179.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_c80yb")
theme_override_font_sizes/font_size = 23
text = "QUIT"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 439.0
offset_right = 1120.0
offset_bottom = 584.0
texture = ExtResource("5_u0b4l")
region_rect = Rect2(-0.088706, -0.0502968, 224.129, 41.0331)

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 17.0
offset_top = 17.0
offset_right = 1072.0
offset_bottom = 129.0
theme_override_fonts/font = ExtResource("4_c80yb")
text = "T_TEXT_FOR_ART_GALLERY_BUTTONS"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b6hsl")
}

[node name="infotext" type="Control" parent="."]
anchors_preset = 0
offset_top = 664.0
offset_right = 1116.0
offset_bottom = 1272.0

[node name="NinePatchRect" type="NinePatchRect" parent="infotext"]
layout_mode = 0
offset_left = 32.0
offset_top = 214.0
offset_right = 1128.0
offset_bottom = 598.0
texture = ExtResource("8_v1ty1")

[node name="ScrollContainer" type="ScrollContainer" parent="infotext/NinePatchRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 1074.0
offset_bottom = 357.0

[node name="VBoxContainer" type="VBoxContainer" parent="infotext/NinePatchRect/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="infotext/NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_c80yb")
text = "T_HIRDRIH_WIKI_INFO"

[node name="language" type="Control" parent="."]
anchors_preset = 0
offset_right = 1170.0
offset_bottom = 77.0

[node name="PTLangButton" type="TextureButton" parent="language"]
layout_mode = 2
offset_left = 1066.0
offset_top = 6.0
offset_right = 1132.0
offset_bottom = 56.0
texture_normal = ExtResource("1_nypbw")
texture_pressed = ExtResource("2_4okgr")
texture_hover = ExtResource("3_ag4yx")
stretch_mode = 0

[node name="Label2" type="Label" parent="language/PTLangButton"]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 172.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_c80yb")
theme_override_font_sizes/font_size = 23
text = "PT"

[node name="ENLangButton" type="TextureButton" parent="language"]
layout_mode = 2
offset_left = 995.0
offset_top = 6.0
offset_right = 1061.0
offset_bottom = 56.0
texture_normal = ExtResource("1_nypbw")
texture_pressed = ExtResource("2_4okgr")
texture_hover = ExtResource("3_ag4yx")
stretch_mode = 0

[node name="Label2" type="Label" parent="language/ENLangButton"]
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 173.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_c80yb")
theme_override_font_sizes/font_size = 23
text = "EN"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="language/PTLangButton" to="." method="_on_pt_lang_button_pressed"]
[connection signal="pressed" from="language/ENLangButton" to="." method="_on_en_lang_button_pressed"]
